# Distributed-Proxy-Node-Scheduler

./: CMakeLists.txt
control-plane/include/: config.hpp  health_checker.hpp  node.hpp  node_registry.hpp  scheduler.hpp  type.hpp
control-plane/src/: health_checker.cpp  http_server.cpp  main.cpp  node_registry.cpp  scheduler.cpp
control-plane/tests/: test_script.py
node-agent/: client.go  config.go  main.go  node_agent.go  types.go
